<?xml version="1.0"?>
<package format="2">
  <name>basalt</name>
  <version>0.1.0</version>
  <description>basalt VIO</description>

  <maintainer email="info@vision.in.tum.de">Vladyslav Usenko</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
